[package]
name = "quantum-computing-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.4"
num = "0.4.0"
num-traits = "0.2.15"
rand = "0.8.5"
nannou = "0.18.1"
itertools = "0.10.5"